# game-of-life

./: .gitignore  .prettierignore  .rswrc.json  auto-imports.d.ts  components.d.ts  env.d.ts  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  windi.config.ts
components/: TheAssignmentSwitch.vue  TheControls.vue  TheDrawer.vue  TheToolSwitch.vue  TheUniverse.vue
components/app/: ButtonRound.vue  IconButton.vue  IconSelect.vue  Range.vue  Slider.vue
composables/: animationFrames.ts  index.ts  onOutsideClick.ts  onResize.ts  universe.ts  useOnResize.ts  useUniverse.ts
layouts/: default.vue
pages/: index.vue
src/: App.vue  main.ts
src/components/: TheConfiguration.vue  TheControls.vue  TheDrawer.vue  TheFramerateDisplay.vue  ThePwaToasts.vue  TheReloadPrompt.vue  TheToolSwitch.vue  TheToolToggle.vue  TheUniverse.vue
src/components/app/: Button.vue  Checkbox.vue  IconButton.vue  Slider.vue  Toast.vue
src/store/: universe.ts
src/utils/: getPositionInElement.ts
src/wasm/universe/: Cargo.toml
src/wasm/universe/src/: lib.rs
store/: universe.ts
types/: modules.d.ts
utils/: debounce.ts  getDevicePixels.ts  getRelativeCoordinates.ts  index.ts  normalizeUrl.ts
wasm/universe/: Cargo.toml
wasm/universe/src/: js.rs  lib.rs  utils.rs
