[package]
name = "universe"
version = "0.1.0"
authors = ["Jason Theiler <turret.jason@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.50", features = [
    "AddEventListenerOptions",
    "Document",
    "Element",
    "EventListener",
    "EventListenerOptions",
    "HtmlCanvasElement",
    "Window",
] }

[profile.release]
opt-level = "s"
