[package]
name = "universe"
version = "0.1.0"
authors = ["Jason Theiler <turret.jason@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
web-sys = { version = "0.3.50", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }

[profile.release]
opt-level = "s"
